fixed color schema on dark mode skins for links (#9034)

--- a/resources/assets/less/skins/skin-green-dark.less
+++ b/resources/assets/less/skins/skin-green-dark.less
@@ -163,7 +163,7 @@ body {
 }
 .box-body, .box-footer, .box-header {
   background-color: var(--back-sub);
-  color: var(--text-main);
+  color: var(--header);
 }
 .btn-default{
   background-color: var(--back-main);
@@ -326,13 +326,12 @@ li.select2-results__option{
 a {
   color: var(--link);
   &:link {
-    color: var(--link);
-  }
+    color: var(--header)  }
   &:hover {
     color: var(--light-link);
   }
   &:visited {
-    color: var(--link);
+    color: var(--header)
   }
 }
 
